Fix home image on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ blockquote {
     width: 250px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 400px) {
 	.home-image {
 	    margin: 0 0 15px 0;
 	    width: 100%;
